--- a/index.html
+++ b/index.html
@@ -60,21 +60,21 @@
       <h6 class="sub-testi">“Nature is not a place to visit. It is home.”</h6>
       <div class="container">
         <div class="row">
-          <div class="card card1 col-sm-4">
+          <div class="card card1 col-sm-4 col-4">
             <img class="card-img-top img1" src="images/card-img1.png" alt="Card image cap">
             <div class="card-body">
               <h5 class="card-title">Lorem Ipsum</h5>
               <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
             </div>
           </div>
-          <div class="card card2 col-sm-4">
+          <div class="card card2 col-sm-4 col-4">
             <img class="card-img-top" src="images/card-img2.png" alt="Card image cap">
             <div class="card-body">
               <h5 class="card-title">Lorem Ipsum</h5>
               <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
             </div>
           </div>
-          <div class="card col-sm-4">
+          <div class="card col-sm-4 col-4">
             <img class="card-img-top" src="images/card-img3.png" alt="Card image cap">
             <div class="card-body">
               <h5 class="card-title">Lorem Ipsum</h5>
